Fix utlity buttons not showing css effect on focus

--- a/src/components/players/_.module.css
+++ b/src/components/players/_.module.css
@@ -59,6 +59,11 @@
   gap: 3px;
 }
 
+button[datatype="utility"]:focus {
+  filter: drop-shadow(0px 0px 5px #e16512);
+  transition: filter 0.3s ease-in-out;
+}
+
 /* MEDIA QUERIES */
 @media screen and (max-width: 600px) {
   .board-ctn {
